# Gnome-Theme-Manager

./: .gitignore  README.md  gnome-theme-manager.desktop  gnome-theme-manager.py  gtm_launcher.py  pyproject.toml
gnome_theme_manager/: __init__.py  api.py  detail.py  installer.py  style.css  widgets.py  window.py
